--- a/todo
+++ b/todo
@@ -1,5 +1,5 @@
 ****validation on address form field
-
+**** fix upload picture function
 
 figure out how to make home - the main search page if you are logged in 
 if - not logged in then direct to landing page 
