add zoom levels to javascript

--- a/todo
+++ b/todo
@@ -1,21 +1,1 @@
-
-
-figure out how to make home - the main search page if you are logged in 
-if - not logged in then direct to landing page 
-else if when logged in = true direct to main search page 
-
-
-- make the landing page not accessable if logged in because it is unneccessary 
-- or pop the login page onto the landing page 
-
-
-- login is accessible when 
-
-
-logo link to be search page if logged in - sign in page if not 
-
-
-
-- create profile form and edit profile form the same?? problems with foutes function updating and creating 
-
-
+- format of html templates 
